[package]
name = "mkd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive", "cargo"] }
clap_autocomplete = "0.1"
owo-colors = "3.3"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]